--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,50 @@
-*.Po
+*~
+.*
+*.lo
 *.o
-*.dSYM/*
+*.so
+*.la
+*.a
+*.trs
+*.test
+*.log
+*.gch
+*.exe
+*.dll
+
+/aclocal.m4
+/autom4te.cache/
+/build-aux/
+/m4/
+/configure
+/Makefile
+/Makefile.in
+/config.h
+/config.h.in
+/config.status
+/libtool
+/stamp-h1
+
+/lib/
+/bin/
+/sbin/
+/tmp/
+/var/
+
+*.save*
+*.swp
+*.*~
+*.orig
+*.rej
+*.out
+*.tar
+*.tar.*
+*.deb
+*.stackdump
+core.*
+callgrind.*
+
+libsparsehash.pc
+src/config.h
+src/sparsehash/internal/sparseconfig.h
+src/stamp-h1
